# dx-delegation-sc

./: CHANGELOG.md  README.md
auction-mock/: Cargo.toml
auction-mock/meta/: Cargo.toml
auction-mock/output/: auction-mock.abi.json  auction-mock.imports.json
auction-mock/src/: lib.rs
auction-mock/wasm/: Cargo.toml
latest/: Cargo.toml
latest/src/: auction_proxy.rs  lib.rs  node_activation.rs  reset_checkpoint_endpoints.rs  reset_checkpoint_types.rs  rewards_endpoints.rs  rewards_state.rs  user_stake_dust_cleanup.rs  user_stake_endpoints.rs
latest_full/: Cargo.toml
latest_full/meta/: Cargo.toml
latest_full/output/: delegation_latest_full.abi.json  delegation_latest_full.imports.json
latest_full/scenarios/: claim_rewards_1.scen.json  claim_rewards_owner_with_stake.scen.json  claim_rewards_with_changed_service_fee.scen.json  claim_rewards_with_modify_delegation_cap.scen.json  claim_rewards_with_stake_modifications.scen.json  decrease_cap_in_bootstrap_mode.scen.json  rewards_for_unStaked_go_to_the_owner.scen.json  total_funds_getters.scen.json  unjail.scen.json  (+3 more)
latest_update/: Cargo.toml
latest_update/meta/: Cargo.toml
latest_update/meta/src/: main.rs
latest_update/output/: delegation_latest_update.abi.json  delegation_latest_update.imports.json
latest_update/scenarios/: genesis_addr_fix.scen.json
latest_update/src/: lib.rs
latest_update/tests/: v0_5_update_scenario_go_test.rs  v0_5_update_scenario_rs_test.rs
latest_update/wasm/: Cargo.toml
latest_update/wasm/src/: lib.rs
node-storage/: Cargo.toml
user-fund-storage/: Cargo.toml
(+31 files in other folders)
